--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css"> <!-- Pretendard font -->
     <link rel="stylesheet" href="./css/global.css"> <!-- global css -->
     <link rel="stylesheet" href="./css/main.css"> <!-- main css -->
+    <link rel="preload" href="./video/wave-lightmode.mp4" as="video" type="video/mp4">
+    <link rel="preload" href="./video/wave-darkmode.mp4" as="video" type="video/mp4">
 </head>
 
 <body class="loading">
